@startuml
skinparam classAttributeIconSize 0

title UML Class Diagram - Image Processing System (SRP Compliance)

' Інтерфейси
interface IImageLoader {
  + LoadImage(imagePath: string): byte[]
}

interface IImageValidator {
  + Validate(imageData: byte[]): bool
}

interface IImageResizer {
  + Resize(imageData: byte[], width: int, height: int): byte[]
}

interface IImageFilter {
  + ApplyFilter(imageData: byte[], filterType: string): byte[]
}

interface IImageSaver {
  + SaveImage(imageData: byte[], outputPath: void): void
}

interface ILogger {
  + Log(message: string): void
}

interface INotificationService {
  + SendNotification(message: string): void
}

' Класи реалізації
class FileImageLoader {
  + LoadImage(imagePath: string): byte[]
}

class ImageValidator {
  + Validate(imageData: byte[]): bool
}

class ImageResizer {
  + Resize(imageData: byte[], width: int, height: int): byte[]
}

class ImageFilter {
  + ApplyFilter(imageData: byte[], filterType: string): byte[]
}

class FileImageSaver {
  + SaveImage(imageData: byte[], outputPath: void): void
}

class ConsoleLogger {
  + Log(message: string): void
}

class EmailNotificationService {
  + SendNotification(message: string): void
}

' Головний клас
class ImageProcessor {
  - imageLoader: IImageLoader
  - imageValidator: IImageValidator
  - imageResizer: IImageResizer
  - imageFilter: IImageFilter
  - imageSaver: IImageSaver
  - logger: ILogger
  - notificationService: INotificationService
  + ImageProcessor(loader, validator, resizer, filter, saver, logger, notifier)
  + ProcessImage(inputPath, outputPath, width, height, filterType): bool
}

class BadImageProcessor {
  - imagePath: string
  - imageData: byte[]
  + ProcessImage(outputPath, width, height, filterType): void
  - LoadImage(): void
  - ValidateImage(): bool
  - ResizeImage(width, height): void
  - ApplyFilter(filterType): void
  - SaveImage(outputPath): void
  - LogProcessing(): void
  - SendNotification(): void
}

' Відношення реалізації інтерфейсів
FileImageLoader ..|> IImageLoader
ImageValidator ..|> IImageValidator
ImageResizer ..|> IImageResizer
ImageFilter ..|> IImageFilter
FileImageSaver ..|> IImageSaver
ConsoleLogger ..|> ILogger
EmailNotificationService ..|> INotificationService

' Асоціації (залежності)
ImageProcessor --> IImageLoader
ImageProcessor --> IImageValidator
ImageProcessor --> IImageResizer
ImageProcessor --> IImageFilter
ImageProcessor --> IImageSaver
ImageProcessor --> ILogger
ImageProcessor --> INotificationService

note top of BadImageProcessor
Порушує SRP:
1. Завантажує
2. Валідує
3. Змінює розмір
4. Застосовує фільтр
5. Зберігає
6. Логує
7. Сповіщає
end note

note top of ImageProcessor
Дотримується SRP:
Залежить від абстракцій
(Dependency Inversion Principle)
end note

@enduml